--- a/src/containers/System/Doctor/ManageCinema.scss
+++ b/src/containers/System/Doctor/ManageCinema.scss
@@ -94,10 +94,11 @@
     margin-top: 10px;
 
     img {
-      max-width: 100%;
-      height: auto;
-      border: 1px solid #ddd;
-      border-radius: 5px;
+      // max-width: 100%;
+      width: 50px;
+      height: 100px;
+      // border: 1px solid #ddd;
+      // border-radius: 5px;
     }
   }
 
