--- a/src/containers/Patient/Staff/ManageScreeningRoom/CinemaSelector.scss
+++ b/src/containers/Patient/Staff/ManageScreeningRoom/CinemaSelector.scss
@@ -9,7 +9,9 @@
     h1 {
         font-size: 1.8rem;
         color: #333;
-        margin-bottom: 15px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        padding-top: 15px;
         text-align: center;
     }
 
