fix trung khung gio

--- a/src/containers/Patient/Staff/ManageScreeningRoom/TheaterDetails.scss
+++ b/src/containers/Patient/Staff/ManageScreeningRoom/TheaterDetails.scss
@@ -98,6 +98,10 @@
         background-color: #4caf50;
         color: #fff;
     }
+     &--used {
+        background-color: #ffeb3b;  // Yellow for used seats
+        color: #000;
+    }
 }
 
 // Modal phóng to sơ đồ ghế
